[package]
name = "actix-rt-wasm-test"
version = "0.1.0"
authors = ["yuki <yuki@wthrk.jp>"]
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
actix-rt = { path = "../actix-rt", version = "2.9.0", features = ["rt-wasm-bindgen"], default-features = false }

tokio = { version = "*", features = ["sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "*"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
web-sys = { vertion = "*", features = ["console", "Window"] }
web-time = { version = "*" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
